--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
-include README.md
+include README.rst
 recursive-include toastmessage/static/css *
 recursive-include toastmessage/static/js *
 recursive-include toastmessage/static/images/notify *
 recursive-include toastmessage/templates *
+recursive-include toastmessage/templatetags *
