--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,7 @@
 include README.rst
+include LISENSE.MIT
+include setup.cfg
+include MANIFEST.in
 recursive-include toastmessage/static/css *
 recursive-include toastmessage/static/js *
 recursive-include toastmessage/static/images/notify *
